--- a/vista/msjV.html
+++ b/vista/msjV.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title> Dar en Adopcion...</title>
+        <title> Error </title>
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     </head>
@@ -19,7 +19,7 @@
                 </button>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="formulariob.php">Mascota Perdida</a></li>
-                    <li><a class="dropdown-item" href="formularioDarAdop.php">Dar en Adopcion</a></li>
+                    <li><a class="dropdown-item" href="msjV.html">Dar en Adopcion</a></li>
                 </ul>
             </div>
             <a href="msjV.html" class="nav-link active">          
