agrega contenido en trasacciones.php

--- a/vista/msjV.html
+++ b/vista/msjV.html
@@ -10,7 +10,7 @@
         <!-- MENU DE INICIO -->
         <nav class="nav p-3 justify-content-end">
             <a href="inicio.html" class="nav-link active" aria-current="page">Inicio</a>
-            <a href="#" class="nav-link active">Perdidos</a>
+            <a href="mostrar_public.php" class="nav-link active">Perdidos</a>
             <a href="#" class="nav-link active">Adoptar</a>
             <!-- Dropdown -->
             <div class="btn-group">
