--- a/vista/inicio.html
+++ b/vista/inicio.html
@@ -31,6 +31,12 @@
             </a>
         </nav>
 
+        <div class="text-center">
+        <h2>🐾Bienvenid@s a Pichichos Ros🐾</h2><br>
+        <h4>Si perdiste a tu mascota, realiza una publicacion para mas posibilidades de encontrarl@, te deseamos mucha suerte</h4><br>
+        <a href="formulariob.php">Realizar publicacion</a>
+        </div>
+
         <!-- JavaScript Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     </body>
