Cambios en inicio

--- a/vista/inicio.html
+++ b/vista/inicio.html
@@ -37,27 +37,30 @@
         <div class="text-center">
         <h2>🐾Bienvenid@s a Pichichos Ros🐾</h2><br>
         </div>
+
             <!--SLIDER-->
-    <div id="carouselInicio" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
+        
+        <div class="container-md">
+<div id="carouselExampleFade" class="carousel slide carousel-fade">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <a href="formulariob.php"><img src="img/bannerPERDIDOS.png" class="d-block w-100" alt="banner perdidos"></a>
+    </div>
+    <div class="carousel-item">
+      <a href="petshop.html"><img src="img/PETSHOP.png" class="d-block w-100 h-80" alt="petshop"></a>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Anterior</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Siguiente</span>
+  </button>
+</div>
+</div><br>
 
-          <div class="carousel-item active" data-bs-interval="4000" wrap="true">
-           <a href="formulariob.php"> <img src="img/bannerPERDIDOS.png" class="d-block w-100" alt="..."></a>
-          </div>
-
-          <div class="carousel-item" data-bs-interval="4000">
-            <a href="petshop.html"> <img src="img/PETSHOP.png" class="d-block w-100" alt="..."></a>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
   <!-- FOOTER -->
   <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50">
     <div class="d-flex flex-column">
