Arreglo de links del footer, se agrega nombre Tienda al boton del navbar, ajuste del slider del petshop, modificaciones en el texto de alerta publicacion exitosa

--- a/vista/petshop.html
+++ b/vista/petshop.html
@@ -31,14 +31,18 @@
               </ul>
           </div>
           
-          <a href="petshop.html" class="nav-link active">          
+          <a href="petshop.html" class="nav-link active">Tienda          
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                   <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
               </svg>    
           </a>
       </nav>
     </a>
-  <div id="carouselExampleCaptions" class="carousel slide">
+
+
+    <!--SLIDER-->
+    <div class="container-md">
+  <div id="carouselExampleCaptions" class="carousel slide carousel-fade">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -75,7 +79,10 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-  </div><br><br><br><br><br><br><br><br><br><br><br>
+  </div>
+  </div> 
+  <br><br><br><br><br><br><br><br><br><br><br>
+       <!--TARJETAS DE PRODUCTOS O LOCALES-->
   <div class="row row-cols-1 row-cols-md-2 g-4">
     <div class="col">
       <div class="card">
@@ -91,6 +98,7 @@
         </div>
       </div>
     </div>
+  
     <div class="col">
       <div class="card">
         <img src="img/tienda2.jpg" class="card-img-top" alt="...">
@@ -134,6 +142,9 @@
       </div>
     </div>
   </div><br><br><br><br>
+
+
+
   <!-- FOOTER -->
   <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50">
     <div class="d-flex flex-column">
@@ -152,8 +163,8 @@
         <div class="col-6 col-lg-2 offset-lg-1 mb-3">
           <h5>Github</h5>
           <ul class="list-unstyled">
-            <li class="mb-2"><a href="https://github.com/arielrey" class="nav-link active">bethvalenti</a></li>
-            <li class="mb-2"><a href="https://github.com/bethvalenti"  class="nav-link active">arielrey</a></li>
+            <li class="mb-2"><a href="https://github.com/bethvalenti" class="nav-link active">bethvalenti</a></li>
+            <li class="mb-2"><a href="https://github.com/arielrey"  class="nav-link active">arielrey</a></li>
           </ul>
         </div>
         <div class="col-6 col-lg-2 mb-3">
