--- a/vista/inicio.html
+++ b/vista/inicio.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title> Inicio </title>
         <!-- CSS only -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">   
     </head>
     <body>      
       <!-- LOGO -->
@@ -27,40 +27,64 @@
                     <li><a class="dropdown-item" href="msjV.html">Dar en Adopcion</a></li>
                 </ul>
             </div>
+            <button class="btn nav-link" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Nosotros</button>
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+              <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasRightLabel">Nuestro Sitio</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              </div>
+              <div class="offcanvas-body">
+                <div class="alert alert-info" role="alert">
+                <h4>En este sitio vas a encontrar y realizar publicaciones con fotos y datos de mascotas perdidas en Rosario.
+                ¡no hace falta que sea una mascota tuya, tambien puede ser un aviso que viste en la calle para ayudar a difundir!🐾</h4>
+                </div>
+                <br><br><br>
+                <h5>¿Por que Pichos Ros?</h5><br>
+                <div class="alert alert-info" role="alert">
+                  <h4>
+                  - Ciuda tus datos personales <br>
+                  - Es facil de usar <br>
+                  - Encontras nuevas tiendas <br>
+                  </h4>
+                  </div>
+              </div>
+            </div>
             <a href="petshop.html" class="nav-link active">Tienda          
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                     <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                 </svg>    
             </a>
         </nav>
-      </a>
+      </a><br><br>
         <div class="text-center">
-        <h2>🐾Bienvenid@s a Pichichos Ros🐾</h2><br>
+          <h1 class="display-4">¡Bienvenidos a Pichichos Ros!</h1><br>
         </div>
-
             <!--SLIDER-->
-        
         <div class="container-md">
-<div id="carouselExampleFade" class="carousel slide carousel-fade">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <a href="formulariob.php"><img src="img/bannerPERDIDOS.png" class="d-block w-100" alt="banner perdidos"></a>
-    </div>
-    <div class="carousel-item">
-      <a href="petshop.html"><img src="img/PETSHOP.png" class="d-block w-100 h-80" alt="petshop"></a>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Anterior</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Siguiente</span>
-  </button>
-</div>
-</div><br>
-
+          <div id="carouselExampleFade" class="carousel slide carousel-fade">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <a href="formulariob.php"><img src="img/bannerPERDIDOS.png" class="d-block w-100" alt="banner perdidos"></a>
+              </div>
+              <div class="carousel-item">
+                <a href="petshop.html"><img src="img/PETSHOP.png" class="d-block w-100 h-80" alt="petshop"></a>
+              </div>
+            </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Siguiente</span>
+            </button>
+          </div>
+        </div><br>
+        <div class="bg-success p-2 text-dark bg-opacity-50">
+          <marquee>
+            <p>  ¿Sabias que los perros y gatos pueden tener diabetes?. Consultalo con su veterinario.    //    Si conoces un caso o presencias casos de maltrato animal, ingresa a <a href="https://www.argentina.gob.ar/justicia/derechofacil/leysimple/maltrato-animales">este link</a>. Ley 14.346 .</p>
+          </marquee>
+        </div>
   <!-- FOOTER -->
   <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50">
     <div class="d-flex flex-column">
@@ -96,7 +120,6 @@
         <div class="col-6 col-lg-2 mb-3">
           <h5>Contacto</h5>
           <ul class="list-unstyled">
-            <li class="mb-2"><p>341 278-4977 / 341 276-2260</p></li>
             <li class="mb-2"><p>elizabethvalenti28@gmail.com</p></li>
             <li class="mb-2"><p>reynacho163@gmail.com</p></li>
           </ul>
